--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <link rel="stylesheet" href="/CSS/Nota Interativa/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <main class="grade">
     <div class="image_star">
-      <img src="/IMG/Nota Interativa/icon-star.svg" alt="icon-star.svg">
+      <img src="images/icon-star.svg" alt="icon-star.svg">
     </div>
 
     <section class="text">
@@ -73,7 +73,7 @@
 
   <main class="thank_you hide">
     <section class="image_thankyou">
-      <img src="/IMG/Nota Interativa/illustration-thank-you.svg" alt="illustration-thank-you.svg">
+      <img src="images/illustration-thank-you.svg" alt="illustration-thank-you.svg">
     </section>
 
     <section class="selection">
@@ -94,7 +94,7 @@
     <p>Coded by <a href="https://github.com/RafaelHDSV" target="_blank">Rafael Henrique de Sousa Vieira</a>.</p>
   </div>
 
-  <script src="/JAVASCRIPT/Nota Interativa/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
